--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="be">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>HTML + CSS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=KoHo:wght@300;400;500;700&display=swap">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Services informatiques - Réparation d'ordinateurs</title>
 </head>
+
 <body>
-    <script src="/js/scripts.js"></script>
+    <header>
+        <h1>IT Lab <span class="solutions">Solutions</span></h1>
+        <div class="mobile-header"></div>
+    </header>
+    <nav></nav>
+    <main></main>
+    <footer></footer>
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
